12th March '2000: wxWindows 2.1.14 released

Added wxDragImage class for dragging easily images.

The DEB and RPM packages now conform better to various
standards.

Renamed wx-config to wxgtk-config so that motif can be co-installed
on the same machine (with wxmotif-config).

Speed up for drawing by resuing once created DCs instead of
creating and destroying them all the time.

Corrections to clipping region code (among others related to
simultaneous bitmap clipping).

A few more improvements to tab traversal.

A number of changes to socket code.

Added code for rotating images.

Much work on the new grid class has been done. Very cool now.

wxPlotWindow is now useful and works. Added on-off lines useful for
displaying trigger signals.

Corrected one more bug in the TIFF handler.

It is now possible to run wxGTK apps in the best visual
instead of only the default on system that support this
(typically IRIX).

Added default keyboard handling to wxScrolledWindow.

Fixed slightly overoptimized window colour and style handling.
This will expose a bug in the GtkPixmap theme, or more exactly
in ImLib's image cashing so that wxGTK currently doesn't work
well with pixmap themes. As a result, wxGTK will disable all
widget settings when using this theme.

Fixed bug in drawing code that made GTK pick the wrong pen
style when using the default.

The L-GPL iODBC library must now be enables explicitly so as
to not mislead people into reading the license wrong.

24th January '2000: wxWindows 2.1.13 released

Corrections to TAB handling in notebooks.

Added scroll event to indicate when the thumb has
been released (as opposed to only changed).

Fixed crashes with GTK Pixmap theme.

Fixed endianness problems in image code.

Minor fixes for sockets related to GUI reentrance. Also
improved the IPV address class and added more error
checking and rekated things.

Many enhancements to wxHTML, more tags supported, better support
for non-western texts etc.
